@@ -27,6 +27,12 @@ dependencies {
 
 application {
     mainClass = "com.insoftu.thefix.client.TheFixClientApplication"
+    applicationDefaultJvmArgs = listOf(
+        "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    )
 }
 
 tasks.test {
